# mc_g1

./: .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
src/: config.h.in  g1.cpp  g1.h
tests/: CMakeLists.txt  test_module.cpp
